# python_project_full_template

./: .gitignore  .ruff.toml  README.md  TODO.md  cmd_example.py  delme.sh  main.py  pyproject.toml  sample.txt  setup.py
src/dataval/: __init__.py  setup.py  transformer.py
src/dataval/validation/: __init__.py
src/mypackage1/: __init__.py  cli.py
src/mypackage1/subpackage/: module3.py
src/mypackage2/: module1.py
src/mypackage2/subpackage/: module3.py
src/texkit/: cli.py
src/texkit/advanced/: __init__.py
src/textkit/: cli.py  setup.py  transformers.py  validators.py
tests/: __init__.py  test_module1.py  test_module2.py  unittest_example.py
