[project]
name = "demo-project"
version = "0.1.0"
description = "Demo project with a CLI utility and data validation library"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "daymanvt", email = "kmc@kmc.com"},
]
dependencies = [
    "fastapi>=0.115.11",
]

[dependency-groups]
dev = [
    "click>=8.1.8",
    "icecream>=2.1.4",
    "pytest>=8.3.5",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
textutils = "textkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]